add js function to return list
Co-authored-by: Richard Cha <charichard09@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,63 +2,63 @@
 <html lang="en-US">
 <head>
   <title>Groceries</title>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <!-- <link href="css/styles.css" rel="stylesheet" type="text/css"> -->
   <script src="js/scripts.js"></script>
 </head>
 <body>
   <h2>Grocery List</h2>
-  <form id="transportation_survey">
+  <form id="grocery_list">
     <p>Please select the groceries you would like:</p>
     <label>
-      <input type="checkbox" name="transportation-option" value="tomatoes">
+      <input type="checkbox" name="grocery-option" value="tomatoes">
       Tomatoes.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="bananas">
+      <input type="checkbox" name="grocery-option" value="bananas">
       Bananas.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="groundbeef">
+      <input type="checkbox" name="grocery-option" value="groundbeef">
       Groundbeef.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="cereal">
+      <input type="checkbox" name="grocery-option" value="cereal">
       Cereal.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="cookies">
+      <input type="checkbox" name="grocery-option" value="cookies">
       Cookies.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="chickens">
+      <input type="checkbox" name="grocery-option" value="chickens">
       Chicken.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="greenOnions">
+      <input type="checkbox" name="grocery-option" value="greenOnions">
       Green Onions.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="carrots">
+      <input type="checkbox" name="grocery-option" value="carrots">
       Carrots.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="iceCream">
+      <input type="checkbox" name="grocery-option" value="iceCream">
       Ice Cream.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="bread">
+      <input type="checkbox" name="grocery-option" value="bread">
       Bread.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="noodles">
+      <input type="checkbox" name="grocery-option" value="noodles">
       Noodles.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="ibuprofin">
+      <input type="checkbox" name="grocery-option" value="ibuprofin">
       Ibuprofin.
     </label><br>
     <label>
-      <input type="checkbox" name="transportation-option" value="somethingElse">
+      <input type="checkbox" name="grocery-option" value="somethingElse">
       Need something else.
     </label><br>
     <button type="submit">Submit List</button>
